--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Sign In</h1>
-<form action="" method="post" novalidate>
+<h1>Register</h1>
+<form action="" method="post">
   {{ form.hidden_tag() }}
   <p>
     {{ form.username.label }}<br />
@@ -9,15 +9,23 @@
     {% endfor %}
   </p>
   <p>
-    {{ form.password.label }}<br />
-    {{ form.password(size=32) }} {% for error in form.password.errors %}
-    <span style="color:red;">{{ error }}</span>
+    {{ form.email.label }}<br />
+    {{ form.email(size=64) }} {% for error in form.email.errors %}
+    <span style="color:red;">{{ error }} </span>
     {% endfor %}
   </p>
   <p>
-    {{ form.remember_me() }} {{ form.remember_me.label }}
+    {{ form.password.label }}<br />
+    {{ form.password(size=32) }} {% for error in form.password.errors %}
+    <span style="color:red;">{{ error }} </span>
+    {% endfor %}
+  </p>
+  <p>
+    {{ form.password2.label }}<br />
+    {{ form.password2(size=32) }} {% for error in form.password2.errors %}
+    <span style="color:red;">{{ error }} </span>
+    {% endfor %}
   </p>
   <p>{{ form.submit() }}</p>
 </form>
-<p>New user?<a href="{{ url_for('register') }}">Register</a></p>
 {% endblock %}
