--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -8,6 +8,8 @@
       <p>{{ user.about_me }}</p>
       {% endif %} {% if user.last_seen %}
       <p>Last seen: {{ user.last_seen }}</p>
+      {% endif %} {% if user==current_user %}
+      <p><a href="{{ url_for('edit_profile') }}">Edit Profile</a></p>
       {% endif %}
     </td>
   </tr>
