--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -8,8 +8,19 @@
       <p>{{ user.about_me }}</p>
       {% endif %} {% if user.last_seen %}
       <p>Last seen: {{ user.last_seen }}</p>
-      {% endif %} {% if user==current_user %}
+      {% endif %}
+      <p>
+        {{ user.followers.count() }} followers,{{ user.followed.count() }}
+        following
+      </p>
+      {% if user==current_user %}
       <p><a href="{{ url_for('edit_profile') }}">Edit Profile</a></p>
+      {% elif not current_user.is_following(user) %}
+      <p><a href="{{ url_for ('follow',username=user.username)}}">Follow</a></p>
+      {% else %}
+      <p>
+        <a href="{{ url_for ('unfollow',username=user.username)}}">Unfollow</a>
+      </p>
       {% endif %}
     </td>
   </tr>
