--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 {% extends 'bootstrap/base.html' %} {% block title %} {% if title %}{{ title }}
 - Microblog{% else %}Welcome to Microblog{% endif %} {% endblock %} {% block
+scripts %} {{ super() }} {{ moment.include_moment() }} {% endblock %} {% block
 navbar %}
 <nav class="navbar navbar-default">
   <div class="container">
