--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -9,6 +9,9 @@
       <a href="{{ url_for('user', username=post.author.username) }}">
         {{ post.author.username }}
       </a>
+      <br />
+      <a href="#">Translate</a>
+
       said {{ moment(post.timestamp).fromNow() }}:
       <br />
       {{ post.body }}
