feat(post lang translation):Add Front-End logic

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,7 @@
 {% extends 'bootstrap/base.html' %} {% block title %} {% if title %}{{ title }}
 - Microblog{% else %}Welcome to Microblog{% endif %} {% endblock %} {% block
 scripts %} {{ super() }} {{ moment.include_moment() }}
-<script>
-  function translate(sourceElem, targetElem, sourceLang, targetLang) {}
-</script>
-
+<script src="{{ url_for('static', filename='translate.js')}}"></script>
 {% endblock %} {% block navbar %}
 <nav class="navbar navbar-default">
   <div class="container">
