refactor(post transaltion):Add response object validation

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -12,7 +12,7 @@
       <br />
       {% if post.language %}
       <span id="translation{{ post.id }}">
-        <a href="" class="translate_link">Translate</a>
+        <a href="#" class="translate_link">Translate</a>
       </span>
       {% endif %} said {{ moment(post.timestamp).fromNow() }}:
       <br />
