--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,11 @@
 {% extends 'bootstrap/base.html' %} {% block title %} {% if title %}{{ title }}
 - Microblog{% else %}Welcome to Microblog{% endif %} {% endblock %} {% block
-scripts %} {{ super() }} {{ moment.include_moment() }}
+scripts %} {{ super() }} {{ moment.include_moment() }} {{ moment.lang(g.locale)
+}}
 <script src="{{ url_for('static', filename='translate.js')}}"></script>
+<script>
+  let g_locale = "{{ g.locale }}";
+</script>
 {% endblock %} {% block navbar %}
 <nav class="navbar navbar-default">
   <div class="container">
