--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@ scripts %} {{ super() }} {{ moment.include_moment() }} {{ moment.lang(g.locale)
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_anonymous %}
-        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
         {% else %}
         <li>
           <a href="{{ url_for('user', username=current_user.username) }}"
