--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,23 +19,23 @@ scripts %} {{ super() }} {{ moment.include_moment() }} {{ moment.lang(g.locale)
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ url_for('index') }}">Microblog</a>
+      <a class="navbar-brand" href="{{ url_for('main.index') }}">Microblog</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('explore') }}">Explore</a></li>
+        <li><a href="{{ url_for('main.index') }}">Home</a></li>
+        <li><a href="{{ url_for('main.explore') }}">Explore</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_anonymous %}
         <li><a href="{{ url_for('auth.login') }}">Login</a></li>
         {% else %}
         <li>
-          <a href="{{ url_for('user', username=current_user.username) }}"
+          <a href="{{ url_for('main.user', username=current_user.username) }}"
             >Profile</a
           >
         </li>
-        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
         {% endif %}
       </ul>
     </div>
