--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,18 @@ scripts %} {{ super() }} {{ moment.include_moment() }} {{ moment.lang(g.locale)
         <li><a href="{{ url_for('main.index') }}">Home</a></li>
         <li><a href="{{ url_for('main.explore') }}">Explore</a></li>
       </ul>
+      {% if g.search_form %}
+      <form
+        class="navbar-form navbar-left"
+        method="GET"
+        action="{{ url_for('main.search') }}"
+      >
+        <div class="form-group">
+          {{ g.search_form.q(size=20,class='form-control',
+          placeholder=g.search_form.q.labl_text)}}
+        </div>
+      </form>
+      {% endif %}
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_anonymous %}
         <li><a href="{{ url_for('auth.login') }}">Login</a></li>
